--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
     <meta name="theme-color" content="#6366f1">
     <link rel="apple-touch-icon" href="https://img.icons8.com/fluency/192/000000/wallet.png">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&display=swap"
+        rel="stylesheet">
     <!-- Lucide Icons -->
     <script src="https://unpkg.com/lucide@latest"></script>
     <style>
         body {
             font-family: 'Outfit', sans-serif;
-            background-color: #020617; /* Even darker blue */
+            background-color: #020617;
+            /* Even darker blue */
             color: #f1f5f9;
         }
 
@@ -66,7 +68,8 @@
     <div id="passcodeOverlay"
         class="fixed inset-0 z-[100] bg-[#020617] flex flex-col items-center justify-center p-6 transition-all duration-500">
         <div class="mb-10 text-center">
-            <div class="w-24 h-24 premium-gradient rounded-[2rem] flex items-center justify-center mx-auto mb-6 shadow-2xl shadow-indigo-500/20 rotate-3">
+            <div
+                class="w-24 h-24 premium-gradient rounded-[2rem] flex items-center justify-center mx-auto mb-6 shadow-2xl shadow-indigo-500/20 rotate-3">
                 <i data-lucide="lock" class="w-10 h-10 text-white"></i>
             </div>
             <h2 id="passcodeTitle" class="text-3xl font-extrabold premium-text">Secure Access</h2>
@@ -92,7 +95,8 @@
             <button onclick="pressKey('9')" class="keypad-btn">9</button>
             <div class="w-full h-16"></div>
             <button onclick="pressKey('0')" class="keypad-btn">0</button>
-            <button onclick="pressKey('back')" class="flex items-center justify-center text-slate-400 hover:text-white transition-colors">
+            <button onclick="pressKey('back')"
+                class="flex items-center justify-center text-slate-400 hover:text-white transition-colors">
                 <i data-lucide="delete" class="w-8 h-8"></i>
             </button>
         </div>
@@ -120,7 +124,8 @@
                 <p class="text-slate-400 text-sm font-medium">Available Balance</p>
                 <h2 id="balanceDisp" class="text-4xl font-extrabold my-3 tracking-tight">Rs. 0.00</h2>
                 <div class="h-1.5 w-full bg-slate-800 rounded-full mt-6 overflow-hidden">
-                    <div id="balanceProgress" class="h-full premium-gradient transition-all duration-1000" style="width: 0%"></div>
+                    <div id="balanceProgress" class="h-full premium-gradient transition-all duration-1000"
+                        style="width: 0%"></div>
                 </div>
             </div>
 
@@ -138,6 +143,28 @@
                         <p class="text-slate-500 text-[10px] uppercase font-bold tracking-wider">Total Expenses</p>
                     </div>
                     <p id="expenseDisp" class="text-rose-400 font-bold text-lg">Rs. 0.00</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Monthly Breakdown -->
+        <section class="glass rounded-[2rem] p-6 border border-white/5 space-y-4">
+            <div class="flex justify-between items-center">
+                <h3 class="text-sm font-bold text-slate-400 uppercase tracking-widest">Monthly Breakdown</h3>
+                <select id="monthSelect" onchange="updateMonthlyUI()"
+                    class="bg-slate-800 border-none rounded-xl px-3 py-1.5 text-xs font-bold focus:ring-2 focus:ring-indigo-500 outline-none cursor-pointer">
+                    <!-- Options injected by JS -->
+                </select>
+            </div>
+
+            <div class="grid grid-cols-2 gap-4">
+                <div class="bg-emerald-500/5 rounded-2xl p-4 border border-emerald-500/10">
+                    <p class="text-[10px] text-emerald-500/60 uppercase font-black mb-1 tracking-tighter">Income</p>
+                    <p id="monthIncomeDisp" class="text-emerald-400 font-black text-xl leading-none">Rs. 0.00</p>
+                </div>
+                <div class="bg-rose-500/5 rounded-2xl p-4 border border-rose-500/10">
+                    <p class="text-[10px] text-rose-500/60 uppercase font-black mb-1 tracking-tighter">Expenses</p>
+                    <p id="monthExpenseDisp" class="text-rose-400 font-black text-xl leading-none">Rs. 0.00</p>
                 </div>
             </div>
         </section>
@@ -164,7 +191,8 @@
         <section>
             <div class="flex justify-between items-center mb-5 px-1">
                 <h3 class="text-xl font-bold tracking-tight">Timeline</h3>
-                <button onclick="fetchData()" class="w-10 h-10 bg-slate-800/40 rounded-xl flex items-center justify-center text-indigo-400 hover:text-indigo-300 transition-colors">
+                <button onclick="fetchData()"
+                    class="w-10 h-10 bg-slate-800/40 rounded-xl flex items-center justify-center text-indigo-400 hover:text-indigo-300 transition-colors">
                     <i data-lucide="refresh-cw" class="w-5 h-5"></i>
                 </button>
             </div>
@@ -184,13 +212,16 @@
             <h3 class="text-2xl font-bold mb-6 premium-text">Add Income</h3>
             <form id="incomeForm" class="space-y-5">
                 <div>
-                    <label class="text-[10px] text-slate-400 uppercase font-black mb-1.5 block px-1 tracking-widest">Amount (LKR)</label>
+                    <label
+                        class="text-[10px] text-slate-400 uppercase font-black mb-1.5 block px-1 tracking-widest">Amount
+                        (LKR)</label>
                     <input type="number" step="0.01" name="amount" required
                         class="w-full bg-slate-900/50 border border-slate-800 rounded-2xl px-5 py-4 focus:outline-none focus:ring-2 focus:ring-indigo-500 text-lg font-bold"
                         placeholder="0.00">
                 </div>
                 <div>
-                    <label class="text-[10px] text-slate-400 uppercase font-black mb-1.5 block px-1 tracking-widest">Description</label>
+                    <label
+                        class="text-[10px] text-slate-400 uppercase font-black mb-1.5 block px-1 tracking-widest">Description</label>
                     <input type="text" name="description" value="Monthly Allowance" required
                         class="w-full bg-slate-900/50 border border-slate-800 rounded-2xl px-5 py-4 focus:outline-none focus:ring-2 focus:ring-indigo-500">
                 </div>
@@ -211,13 +242,16 @@
             <h3 class="text-2xl font-bold mb-6 text-rose-400">Record Expense</h3>
             <form id="expenseForm" class="space-y-5">
                 <div>
-                    <label class="text-[10px] text-slate-400 uppercase font-black mb-1.5 block px-1 tracking-widest">Amount (LKR)</label>
+                    <label
+                        class="text-[10px] text-slate-400 uppercase font-black mb-1.5 block px-1 tracking-widest">Amount
+                        (LKR)</label>
                     <input type="number" step="0.01" name="amount" required
                         class="w-full bg-slate-900/50 border border-slate-800 rounded-2xl px-5 py-4 focus:outline-none focus:ring-2 focus:ring-rose-500 text-lg font-bold"
                         placeholder="0.00">
                 </div>
                 <div>
-                    <label class="text-[10px] text-slate-400 uppercase font-black mb-1.5 block px-1 tracking-widest">Description</label>
+                    <label
+                        class="text-[10px] text-slate-400 uppercase font-black mb-1.5 block px-1 tracking-widest">Description</label>
                     <input type="text" name="description" required
                         class="w-full bg-slate-900/50 border border-slate-800 rounded-2xl px-5 py-4 focus:outline-none focus:ring-2 focus:ring-rose-500"
                         placeholder="Lunch, Coffee, etc.">
@@ -241,12 +275,15 @@
                 <input type="hidden" name="id">
                 <input type="hidden" name="type">
                 <div>
-                    <label class="text-[10px] text-slate-400 uppercase font-black mb-1.5 block px-1 tracking-widest">Amount (LKR)</label>
+                    <label
+                        class="text-[10px] text-slate-400 uppercase font-black mb-1.5 block px-1 tracking-widest">Amount
+                        (LKR)</label>
                     <input type="number" step="0.01" name="amount" required
                         class="w-full bg-slate-900/50 border border-slate-800 rounded-2xl px-5 py-4 focus:outline-none focus:ring-2 focus:ring-indigo-500 text-lg font-bold">
                 </div>
                 <div>
-                    <label class="text-[10px] text-slate-400 uppercase font-black mb-1.5 block px-1 tracking-widest">Description</label>
+                    <label
+                        class="text-[10px] text-slate-400 uppercase font-black mb-1.5 block px-1 tracking-widest">Description</label>
                     <input type="text" name="description" required
                         class="w-full bg-slate-900/50 border border-slate-800 rounded-2xl px-5 py-4 focus:outline-none focus:ring-2 focus:ring-indigo-500">
                 </div>
